test/golden96/{TrueCLf}.18281408089045870326.golden
INITIALPATH:7:22: error: [GHC-39999]
    • No instance for ‘Real Bool’ arising from a use of ‘formatAnyFractional’
    • In the first argument of ‘putStrLn’, namely ‘(formatAnyFractional Fixed Minus (Nothing :: Maybe (Int, AnyAlign, Char)) Nothing (Just 6 :: Maybe Int) True)’
      In the expression: putStrLn (formatAnyFractional Fixed Minus (Nothing :: Maybe (Int, AnyAlign, Char)) Nothing (Just 6 :: Maybe Int) True)
      In an equation for ‘main’: main = putStrLn (formatAnyFractional Fixed Minus (Nothing :: Maybe (Int, AnyAlign, Char)) Nothing (Just 6 :: Maybe Int) True)
  |
7 | main = putStrLn [fmt|{True:f}|]
  |                      ^^^^^^^^^^